--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -11,6 +11,7 @@ name: ⛓️ Saucer Prebuilt
 
 jobs:
   build-windows:
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -61,6 +62,7 @@ jobs:
           path: "to_upload"
 
   build-macos:
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -110,6 +112,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_qt6:
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -178,6 +181,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_gtk:
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
