--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -153,7 +153,7 @@ jobs:
       - name: 📋 Install dependencies
         uses: ./.github/actions/run-in-container
         with:
-          command: apt update && apt install -y build-essential git gcc-14 cmake xvfb qt6-base-dev qt6-tools-dev qt6-declarative-dev qt6-webchannel-dev qt6-webengine-dev qt6-svg-dev libjson-glib-1.0-0
+          command: apt update && apt install -y build-essential git gcc-14 cmake xvfb qt6-base-dev qt6-tools-dev qt6-declarative-dev qt6-webchannel-dev qt6-webengine-dev qt6-svg-dev
 
       - name: 🔨 Compile
         uses: ./.github/actions/compile
@@ -227,7 +227,7 @@ jobs:
       - name: 📋 Install dependencies
         uses: ./.github/actions/run-in-container
         with:
-          command: apt update && apt install -y build-essential git gcc-14 cmake xvfb libgtk-4-dev libwebkitgtk-6.0-dev libadwaita-1-dev libjson-glib-1.0-0
+          command: apt update && apt install -y build-essential git gcc-14 cmake xvfb libgtk-4-dev libwebkitgtk-6.0-dev libadwaita-1-dev libjson-glib-dev
 
       - name: 🔨 Compile
         uses: ./.github/actions/compile
