--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -126,8 +126,8 @@ jobs:
           # https://hub.docker.com/_/debian/tags?page=&page_size=&ordering=&name=sid-slim
           # https://github.com/tonistiigi/binfmt?tab=readme-ov-file#build-test-image
           - { arch: "x86_64", qemuArch: "linux/amd64" }
-          # - { arch: "x86", qemuArch: "linux/386" }
-          # - { arch: "aarch64", qemuArch: "linux/arm64/v8" }
+          - { arch: "x86", qemuArch: "linux/386" }
+          - { arch: "aarch64", qemuArch: "linux/arm64/v8" }
 
     runs-on: ubuntu-latest
     name: "GNU_Linux-Qt6-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
@@ -182,7 +182,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_gtk:
-    # if: false # Temp disable for testing
+    if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
