--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -113,7 +113,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_qt6:
-    # if: false # Temp disable for testing
+    if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -182,7 +182,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_gtk:
-    if: false # Temp disable for testing
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -195,13 +195,13 @@ jobs:
           # https://hub.docker.com/_/debian/tags?page=&page_size=&ordering=&name=sid-slim
           # https://github.com/tonistiigi/binfmt?tab=readme-ov-file#build-test-image
           - { arch: "x86_64", qemuArch: "linux/amd64" }
-          # - { arch: "x86", qemuArch: "linux/386" }
-          # - { arch: "aarch64", qemuArch: "linux/arm64" }
-          # - { arch: "arm", qemuArch: "linux/arm/v5" }
-          # - { arch: "ppc64le", qemuArch: "linux/ppc64le" }
-          # - { arch: "riscv64", qemuArch: "linux/riscv64" }
-          # - { arch: "s390x", qemuArch: "linux/s390x" }
-          # - { arch: "mips64el", qemuArch: "linux/mips64le" } # el in LLVM, le in qemu/docker.
+          - { arch: "x86", qemuArch: "linux/386" }
+          - { arch: "aarch64", qemuArch: "linux/arm64" }
+          - { arch: "arm", qemuArch: "linux/arm/v5" }
+          - { arch: "ppc64le", qemuArch: "linux/ppc64le" }
+          - { arch: "riscv64", qemuArch: "linux/riscv64" }
+          - { arch: "s390x", qemuArch: "linux/s390x" }
+          - { arch: "mips64el", qemuArch: "linux/mips64le" } # el in LLVM, le in qemu/docker.
 
     runs-on: ubuntu-latest
     name: "GNU_Linux-WebKitGtk-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
