--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -197,11 +197,11 @@ jobs:
           - { arch: "x86_64", qemuArch: "linux/amd64" }
           - { arch: "x86", qemuArch: "linux/386" }
           - { arch: "aarch64", qemuArch: "linux/arm64" }
-          - { arch: "arm", qemuArch: "linux/arm/v5" }
+          # - { arch: "arm", qemuArch: "linux/arm/v5" }
           - { arch: "ppc64le", qemuArch: "linux/ppc64le" }
           - { arch: "riscv64", qemuArch: "linux/riscv64" }
           - { arch: "s390x", qemuArch: "linux/s390x" }
-          - { arch: "mips64el", qemuArch: "linux/mips64le" } # el in LLVM, le in qemu/docker.
+          # - { arch: "mips64el", qemuArch: "linux/mips64le" } # el in LLVM, le in qemu/docker.
 
     runs-on: ubuntu-latest
     name: "GNU_Linux-WebKitGtk-${{ matrix.platform.arch }}-${{ matrix.build-type }}"
