--- a/.github/workflows/saucer-prebuilt.yml
+++ b/.github/workflows/saucer-prebuilt.yml
@@ -11,7 +11,7 @@ name: ⛓️ Saucer Prebuilt
 
 jobs:
   build-windows:
-    if: false # Temp disable for testing
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -62,7 +62,7 @@ jobs:
           path: "to_upload"
 
   build-macos:
-    if: false # Temp disable for testing
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
@@ -113,7 +113,7 @@ jobs:
           path: "to_upload"
 
   build-gnu_linux_qt6:
-    if: false # Temp disable for testing
+    # if: false # Temp disable for testing
     strategy:
       fail-fast: false
       matrix:
