--- a/.github/workflows/gnu_linux_webkitgtk.yml
+++ b/.github/workflows/gnu_linux_webkitgtk.yml
@@ -25,7 +25,7 @@ jobs:
           - { arch: "x86_64", qemuArch: "linux/amd64" }
           - { arch: "x86", qemuArch: "linux/386" }
           - { arch: "aarch64", qemuArch: "linux/arm64" }
-          - { arch: "arm", qemuArch: "linux/arm/v5" }
+          - { arch: "armhf", qemuArch: "linux/arm/v7" }
           - { arch: "ppc64le", qemuArch: "linux/ppc64le" }
           - { arch: "riscv64", qemuArch: "linux/riscv64" }
           - { arch: "s390x", qemuArch: "linux/s390x" }
@@ -50,7 +50,7 @@ jobs:
         with:
           qemuArch: ${{ matrix.platform.qemuArch }}
           dockerArch: ${{ matrix.platform.dockerArch || 'SAME_AS_QEMU' }}
-          image: "debian:trixie-slim"
+          image: "debian:sid-slim"
 
       - name: 📋 Install dependencies
         uses: ./.github/actions/run-in-container
